apps/weatherserver/overlays/stage/image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherserver
spec:
  template:
    spec:
      containers:
        - name: weatherserver
          image: asia-south1-docker.pkg.dev/worlddatetime-stage/weatherserver/weatherserver:b1dd5ed
