apps/weatherserver/overlays/stage/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weatherserver
spec:
  replicas: 2
