apps/weatherserver/overlays/stage/gateway-host.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: weatherserver
spec:
  hostnames:
    - stage.challan.pro
